# Course-Work-2025

./: CMakeLists.txt  README.md
include/: db_schema.h  dbmanager.h  graphview.h  mainwindow.h  scanner.h  stylehelper.h  topologywidget.h
src/: dbmanager.cpp  main.cpp  mainwindow.cpp  scanner.cpp  stylehelper.cpp  topologywidget.cpp
